--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "jspdf": "^3.0.4",
     "lucide-react": "^0.555.0",
     "mermaid": "^11.12.1",
-    "next": "16.0.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
